fix(user): resolve refactor project with base

--- a/template/backend/src/User/src/Ambev.DeveloperEvaluation.User.Domain/Ambev.DeveloperEvaluation.User.Domain.csproj
+++ b/template/backend/src/User/src/Ambev.DeveloperEvaluation.User.Domain/Ambev.DeveloperEvaluation.User.Domain.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Base\src\Ambev.DeveloperEvaluation.Base.Domain\Ambev.DeveloperEvaluation.Base.Domain.csproj" />
+    <ProjectReference Include="..\..\..\Base\src\Ambev.Base.Domain\Ambev.Base.Domain.csproj" />
     <ProjectReference Include="..\Ambev.DeveloperEvaluation.Common\Ambev.DeveloperEvaluation.Common.csproj" />
   </ItemGroup>
 
