--- a/template/backend/src/Sale/src/Ambev.Sale.Query/Ambev.Sale.Query.Domain/Ambev.Sale.Query.Domain.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Query/Ambev.Sale.Query.Domain/Ambev.Sale.Query.Domain.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Base\Base.Domain\Base.Domain.csproj" />
+    <ProjectReference Include="..\..\..\..\Base\src\Ambev.Base.Domain\Ambev.Base.Domain.csproj" />
   </ItemGroup>
 
 </Project>
