--- a/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.WebApi/Ambev.Sale.Command.WebApi.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.WebApi/Ambev.Sale.Command.WebApi.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Base\src\Ambev.Base.WebApi\Ambev.Base.WebApi.csproj" />
     <ProjectReference Include="..\Ambev.Sale.Command.Application\Ambev.Sale.Command.Application.csproj" />
+    <ProjectReference Include="..\Ambev.Sale.Command.Domain\Ambev.Sale.Command.Domain.csproj" />
     <ProjectReference Include="..\Ambev.Sale.Command.Infrastructure.Orm\Ambev.Sale.Command.Infrastructure.Orm.csproj" />
   </ItemGroup>
 
