--- a/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.WebApi/Ambev.Sale.Command.WebApi.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.WebApi/Ambev.Sale.Command.WebApi.csproj
@@ -8,14 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
-    <PackageReference Include="MassTransit" Version="8.3.7" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.7" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Rebus" Version="8.8.0" />
+    <PackageReference Include="Rebus.RabbitMq" Version="10.0.0" />
+    <PackageReference Include="Rebus.ServiceProvider" Version="10.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Base\src\Ambev.Base.WebApi\Ambev.Base.WebApi.csproj" />
+    <ProjectReference Include="..\..\Ambev.Sale.Contracts\Ambev.Sale.Contracts.csproj" />
     <ProjectReference Include="..\Ambev.Sale.Command.Application\Ambev.Sale.Command.Application.csproj" />
     <ProjectReference Include="..\Ambev.Sale.Command.Domain\Ambev.Sale.Command.Domain.csproj" />
     <ProjectReference Include="..\Ambev.Sale.Command.Infrastructure.Orm\Ambev.Sale.Command.Infrastructure.Orm.csproj" />
