feat(sale write and read sincronyze): implement rebus, update database read with messagebus

--- a/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.Application/Ambev.Sale.Command.Application.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.Application/Ambev.Sale.Command.Application.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Base\src\Ambev.Base.Infrastructure.Messaging.Rebus\Ambev.Base.Infrastructure.Messaging.Rebus.csproj" />
+    <ProjectReference Include="..\..\Ambev.Sale.Contracts\Ambev.Sale.Contracts.csproj" />
     <ProjectReference Include="..\Ambev.Sale.Command.Domain\Ambev.Sale.Command.Domain.csproj" />
   </ItemGroup>
 
