fix: compile projects

--- a/template/backend/src/Sale/src/Ambev.Sale.Query.Consumer/Ambev.Sale.Query.Consumer.Infrastructure.Orm/Ambev.Sale.Query.Consumer.Infrastructure.Orm.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Query.Consumer/Ambev.Sale.Query.Consumer.Infrastructure.Orm/Ambev.Sale.Query.Consumer.Infrastructure.Orm.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Base\src\Ambev.Base.Domain\Ambev.Base.Domain.csproj" />
     <ProjectReference Include="..\..\..\..\Base\src\Ambev.Base.Infrastructure.Command.Orm\Ambev.Base.Infrastructure.Command.Orm.csproj" />
     <ProjectReference Include="..\..\..\..\Base\src\Ambev.Base.Infrastructure.Query.Orm\Ambev.Base.Infrastructure.Query.Orm.csproj" />
     <ProjectReference Include="..\..\Ambev.Sale.Query\Ambev.Sale.Query.Domain\Ambev.Sale.Query.Domain.csproj" />
