feat: add docker-compose; add docs; fix issues

--- a/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.WebApi/Ambev.Sale.Command.WebApi.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.WebApi/Ambev.Sale.Command.WebApi.csproj
@@ -4,11 +4,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>19cb4ac2-7b46-47ca-943b-3a57146bd512</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Rebus" Version="8.8.0" />
     <PackageReference Include="Rebus.RabbitMq" Version="10.0.0" />
     <PackageReference Include="Rebus.ServiceProvider" Version="10.3.0" />
