--- a/template/backend/src/Sale/src/Ambev.Sale.Query.Consumer/Ambev.Sale.Query.Consumer.WebApi/Ambev.Sale.Query.Consumer.WebApi.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Query.Consumer/Ambev.Sale.Query.Consumer.WebApi/Ambev.Sale.Query.Consumer.WebApi.csproj
@@ -4,10 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b3f5ac9f-d7ae-4fe9-8e10-d21d0a6a43e8</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Rebus" Version="8.8.0" />
     <PackageReference Include="Rebus.RabbitMq" Version="10.0.0" />
     <PackageReference Include="Rebus.ServiceProvider" Version="10.3.0" />
