--- a/template/backend/src/Sale/src/Ambev.Sale.Query/Ambev.Sale.Query.WebApi/Ambev.Sale.Query.WebApi.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Query/Ambev.Sale.Query.WebApi/Ambev.Sale.Query.WebApi.csproj
@@ -4,10 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>77b38f2d-503d-4865-99bb-e5c4f8be6d21</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
   </ItemGroup>
 
