--- a/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.Application/Ambev.Sale.Command.Application.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Command/Ambev.Sale.Command.Application/Ambev.Sale.Command.Application.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.2" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
