--- a/template/backend/src/Sale/src/Ambev.Sale.Query/Ambev.Sale.Query.WebApi/Ambev.Sale.Query.WebApi.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Query/Ambev.Sale.Query.WebApi/Ambev.Sale.Query.WebApi.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
   </ItemGroup>
 
