--- a/template/backend/src/Sale/src/Ambev.Sale.Query.Consumer/Ambev.Sale.Query.Consumer.WebApi/Ambev.Sale.Query.Consumer.WebApi.csproj
+++ b/template/backend/src/Sale/src/Ambev.Sale.Query.Consumer/Ambev.Sale.Query.Consumer.WebApi/Ambev.Sale.Query.Consumer.WebApi.csproj
@@ -11,6 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Service\**" />
+    <Content Remove="Service\**" />
+    <EmbeddedResource Remove="Service\**" />
+    <None Remove="Service\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Rebus" Version="8.8.0" />
